--- a/client/src/components/ImageFloorPlan.css
+++ b/client/src/components/ImageFloorPlan.css
@@ -140,6 +140,13 @@
   color: #744210;
 }
 
+.tooltip-name {
+  font-size: 1rem;
+  font-weight: 600;
+  color: #1a202c;
+  margin-bottom: 6px;
+}
+
 .tooltip-user {
   font-size: 0.9rem;
   color: #4a5568;
